# polling-agent

./: README.md  app.py  app2.py  cont_draft.md  conten_struc.md  engag_opt.md  final.md  linkdin_post.json  linkedin_automation.py  poll.json  poll_ques.md  pyproject.toml  scheduled_posts.json  seo_opt.md  trendy_relev.md  trendy_topic.md  twitter_post.json
social/: linkedin.py  twitter.py
src/polling_agent/: crew.py  main.py
src/polling_agent/config/: agents.yaml  tasks.yaml
src/polling_agent/models/: output.py
src/polling_agent/tools/: serper_tool.py
